SftpUploader and multiple uploaders support

--- a/src/MAVIS/Properties/launchSettings.json
+++ b/src/MAVIS/Properties/launchSettings.json
@@ -2,7 +2,10 @@
   "profiles": {
     "MAVIS": {
       "commandName": "Project",
-      "commandLineArgs": "-r D:\\cameras"
+      "commandLineArgs": "-r D:\\cameras",
+      "environmentVariables": {
+        "DOTNET_ENVIRONMENT": "Development"
+      }
     }
   }
 }
