--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,8 @@ bld/
 # Visual Studio 2017 auto generated files
 Generated\ Files/
 
+appsettings.Development.json
+
 # MSTest test Results
 [Tt]est[Rr]esult*/
 [Bb]uild[Ll]og.*
